Fix overflow with popup

--- a/src/css/extension.css
+++ b/src/css/extension.css
@@ -789,21 +789,21 @@ body:not([class*="pageShadowContrastBlack"]) .full-div-transparent-background-te
     right: none !important;
 }
 
-.popup-options-modern #invertPageColorsDiv, .popup-options-modern #blueLightReductionFilterSettings {
-    margin-left: -110px;
+.popup-advanced-option-wrapper:has(> #invertPageColorsDiv), .popup-advanced-option-wrapper:has(> #blueLightReductionFilterSettings) {
+    margin-left: -112px;
 }
 
 .popup-options-modern #invertPageColorsDiv:before, .popup-options-modern #blueLightReductionFilterSettings:before {
-    left: 40px;
+    left: 152px;
     right: none !important;
 }
 
-.popup-options-modern #attenuateColorsDiv {
-    margin-left: -220px;
+.popup-advanced-option-wrapper:has(> #attenuateColorsDiv) {
+    margin-left: -224px;
 }
 
 .popup-options-modern #attenuateColorsDiv:before {
-    left: 40px;
+    left: 264px;
     right: none !important;
 }
 
@@ -963,10 +963,4 @@ body.popup.mobile {
 body.popup.mobile #popup-options {
     width: 360px !important;
     margin: 0 auto;
-}
-
-body.popup.mobile footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
